structuring-the-app

--- a/index.html
+++ b/index.html
@@ -14,14 +14,45 @@
         <div id="app-container">
 
             <!-- menu  -->
-            <nav id="nav-cnt" class="position">
+            <nav id="nav-cnt">
+                <!-- profile -->
+                <div id="prof-nav-cnt" class="position">
 
+                </div>
+                
+                <!-- notification -->
+                <div id="notification-cnt" class="position">
+
+                </div>
+
+                <!-- search bar -->
+                <div id="searchbar-cnt" class="position">
+
+                </div>
+
+                <!-- friend chat list -->
+                <div id="friend-list-cnt" class="position">
+
+                </div>
             </nav>
 
             <!-- chat container  -->
-            <div id="chat-cnt" class="position">
+            <section id="chat-cnt">
+                <!-- profile bar -->
+                <div id="prof-chat-bar" class="position">
 
-            </div>
+                </div>
+
+                <!-- chat bar -->
+                <div id="chat-bar-cnt" class="position">
+
+                </div>
+
+                <!-- send message bar -->
+                <div id="send-msg-cnt" class="position">
+
+                </div>
+            </section>
         </div>
     </main>
 
