nav-notification-prof-search

--- a/index.html
+++ b/index.html
@@ -16,18 +16,50 @@
             <!-- menu  -->
             <nav id="nav-cnt">
                 <!-- profile -->
-                <div id="prof-nav-cnt" class="position">
+                <div id="prof-nav-cnt">
+                    <div id="prof-nav-pic">
+                        <div class="position">
 
+                        </div>
+                        
+                        <span>
+                            testo di prova
+                        </span>
+                    </div>
+
+                    <div id="prof-nav-menu">
+                        <i class="fa-sharp fa-solid fa-circle-notch"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
                 </div>
                 
                 <!-- notification -->
-                <div id="notification-cnt" class="position">
+                <div id="notification-cnt">
+                    <div id="notificatoin-bell">
+                        <i class="fa-sharp fa-solid fa-bell-slash"></i>
+                    </div>
+
+                    <div>
+                        <h4>
+                            Ricevi notifiche di nuovi messaggi
+                        </h4>
+                        <a>
+                            Attiva notifiche desktop
+                        </a>
+                    </div>
 
                 </div>
 
                 <!-- search bar -->
-                <div id="searchbar-cnt" class="position">
+                <div id="searchbar-cnt">
+                    <div>
+                        <button for="search-name-chat">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
 
+                        <input name="search-name-chat" type="text" placeholder="Cerca o inizia una nuova chat">
+                    </div>
                 </div>
 
                 <!-- friend chat list -->
