--- a/index.html
+++ b/index.html
@@ -63,8 +63,27 @@
                 </div>
 
                 <!-- friend chat list -->
-                <div id="friend-list-cnt" class="position">
+                <div id="friend-list-cnt">
+                    <div class="card-chat">
+                        <div class="card-pic position">
 
+                        </div>
+
+                        <div>
+                            <h3>
+                                nome
+                            </h3>
+                            <span>
+                                ultimo messaggio inviato
+                            </span>
+                        </div>
+
+                        <div class="card-time">
+                            <span>
+                                ora
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </nav>
 
