porfile-and-chat-sender

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <!-- profile -->
                 <div id="prof-nav-cnt">
                     <div id="prof-nav-pic">
-                        <div class="position">
+                        <div class="card-pic position">
 
                         </div>
                         
@@ -90,8 +90,26 @@
             <!-- chat container  -->
             <section id="chat-cnt">
                 <!-- profile bar -->
-                <div id="prof-chat-bar" class="position">
+                <div id="prof-chat-bar">
+                    <div class="card-pic position">
 
+                    </div>
+
+                    <div>
+                        <h3>
+                            nome
+                        </h3>
+
+                        <span>
+                            testo di prova
+                        </span>
+                    </div>
+
+                    <div id="prof-chat-bar-menu">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-paperclip"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
                 </div>
 
                 <!-- chat bar -->
@@ -100,8 +118,18 @@
                 </div>
 
                 <!-- send message bar -->
-                <div id="send-msg-cnt" class="position">
+                <div id="send-msg-cnt">
+                    <div>
+                        <i class="fa-regular fa-face-smile"></i>
+                    </div>
 
+                    <div id="meassage-sender-cnt">
+                        <input type="text" placeholder="Scrivi un messaggio">
+                    </div>
+
+                    <div>
+                        <i class="fa-solid fa-microphone"></i>
+                    </div>
                 </div>
             </section>
         </div>
