--- a/index.html
+++ b/index.html
@@ -113,8 +113,28 @@
                 </div>
 
                 <!-- chat bar -->
-                <div id="chat-bar-cnt" class="position">
+                <div id="chat-bar-cnt">
+                    <!-- user message  -->
+                    <div class="message user-mxg">
+                        <p>
+                            sono user
+                        </p>
+                        
+                        <span>
+                            ora
+                        </span>
+                    </div>
 
+                    <!-- pc message  -->
+                    <div class="message">
+                        <p>
+                            sono pc
+                        </p>
+
+                        <span>
+                            ora
+                        </span>
+                    </div>
                 </div>
 
                 <!-- send message bar -->
