--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <!-- profile -->
                 <div id="prof-nav-cnt">
                     <div id="prof-nav-pic">
-                        <div class="card-pic position">
-
+                        <div class="card-pic">
+                            <img src="https://xsgames.co/randomusers/avatar.php?g=pixel" alt="">
                         </div>
                         
                         <span>
@@ -65,8 +65,8 @@
                 <!-- friend chat list -->
                 <div id="friend-list-cnt">
                     <div class="card-chat">
-                        <div class="card-pic position">
-
+                        <div class="card-pic">
+                            <img src="https://xsgames.co/randomusers/avatar.php?g=pixel" alt="">
                         </div>
 
                         <div>
@@ -91,8 +91,8 @@
             <section id="chat-cnt">
                 <!-- profile bar -->
                 <div id="prof-chat-bar">
-                    <div class="card-pic position">
-
+                    <div class="card-pic">
+                        <img src="https://xsgames.co/randomusers/avatar.php?g=pixel" alt="">
                     </div>
 
                     <div>
@@ -119,7 +119,7 @@
                         <p>
                             sono user
                         </p>
-                        
+
                         <span>
                             ora
                         </span>
